完善系统配置和代码，优化测试用例生成功能

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ API_HOST=0.0.0.0
 API_PORT=8000
 API_WORKERS=4
 API_TIMEOUT=60
+API_RELOAD=false
 
 # 数据库配置
 DB_URL=sqlite:///algotest.db
@@ -19,6 +20,7 @@ LOG_RETENTION=10 days
 DOCKER_REGISTRY=
 DOCKER_USERNAME=
 DOCKER_PASSWORD=
+DOCKER_TIMEOUT=300
 
 # 智谱AI配置
 ZHIPU_API_KEY=your_zhipu_api_key_here
