--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
-fastapi>=0.100.0
-uvicorn==0.22.0
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-python-dotenv==1.0.0
-python-multipart==0.0.6
-requests==2.31.0
-sqlalchemy==2.0.7
-loguru==0.7.0
-PyJWT==2.6.0
-typing-extensions>=4.8.0
-anyio==3.6.2
-starlette>=0.40.0
-jinja2==3.1.2
-markdown==3.4.3
-langgraph>=0.3.7
-PyPDF2>=3.0.0
-pdfminer.six>=20240706
+pydantic
+starlette
+uvicorn
+fastapi
+python-multipart
+python-dotenv
+typing-extensions
+anyio
+loguru
+langgraph
+zhipuai
+mcp
+PyPDF2
+pdfminer.six
