report生成初步实现

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,11 @@ ZHIPU_MAX_TOKENS=4096
 LLM_RETRY_COUNT=3
 LLM_RETRY_DELAY=5
 LLM_RETRY_BACKOFF=2.0
+
+# MCP配置
+MCP_HOST=
+MCP_PORT=
+SSE_URL=
+
+# 指令格式文档路径
+CMD_FORMAT_PATH=your_path.md
